--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destinations: /home/ec2-user/express-app
     overwrite: true
 hooks:
-  ApplicationStop:
-    - location: scripts/application_stop.sh
-      timeout: 300
-      runas: ec2-user
+  # ApplicationStop:
+  #   - location: scripts/application_stop.sh
+  #     timeout: 300
+  #     runas: ec2-user
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
