--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Anas-Ahmad-Siddiqui/ci-cd_expressjs#readme",
   "dependencies": {
     "axios": "^1.6.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
